corrected overflow css

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,8 @@ h1 {
 }
 
 .carousel {
-  width: var(--slides-width, 640px);
+  width: calc(var(--slides-width, 640px) + 40px);
+  overflow-x: clip;
   position: fixed;
   left: calc(50% - ((var(--slides-width, 640px) + 40px) / 2));
   z-index: 1;
@@ -34,17 +35,17 @@ h1 {
 }
 
 .carousel-navigation a:last-of-type {
-  left: calc(100% - 20px);
+  left: calc(100% - 60px);
 }
 
 .carousel-slides {
   position: relative;
-  display: flex;
   z-index: 2;
 }
 
 .slides {
-  display: inherit;
+  width: var(--slides-width, 640px);
+  display: flex;
   flex-direction: column;
   position: absolute;
   padding-left: 20px;
